--- a/Config
+++ b/Config
@@ -10,20 +10,16 @@ PPDEFINE MODE_PRES_ENTR 109
 
 REQUIRES Driver
 REQUIRES physics/Hydro
-REQUIRES physics/Eos/EosMain/Helmholtz/SpeciesBased2
+#REQUIRES physics/Eos/EosMain/Helmholtz/SpeciesBased2
 # Multigamma for testing
-#REQUIRES physics/Eos/EosMain/Multigamma
-REQUIRES physics/sourceTerms/Burn/BurnMain/nuclearBurn/Aprox13
+REQUIRES physics/Eos/EosMain/Multigamma
 REQUIRES Simulation/SimulationComposition
 REQUIRES Multispecies
 REQUESTS IO   # because Lynn is tired of setting up simulations that don't do anything
 REQUIRES IO/IOMain/hdf5/parallel/PM
 #REQUIRES IO/IOMain/hdf5/serial/PM
-REQUIRES physics/Gravity/GravityMain/Constant
 REQUIRES flashUtilities/numericalRecipes
 REQUIRES Grid/GridBoundaryConditions/OneRow
-
-MASS_SCALAR core
 
 D    xhe4          	mass fraction of he4
 D    xc12          	mass fraction of c12
@@ -41,6 +37,14 @@ D &                        copied along the y and z directions
 D &                	.false. for a spherical configuration
 D    noiseAmplitude    	amplitude of the white noise added to the perturbation
 D    noiseDistance    	distances above and below r_init get noise added
+
+SPECIES H1
+SPECIES HE4
+SPECIES C12
+SPECIES O16
+SPECIES NE20
+SPECIES SI28
+SPECIES FE54
 
 PARAMETER xh1              REAL    0.0 [0.0 to 1.0]
 PARAMETER xhe4             REAL    0.0 [0.0 to 1.0]
@@ -66,14 +70,18 @@ PARAMETER hne20            REAL    0.0 [0.0 to 1.0]
 PARAMETER hsi28            REAL    0.0 [0.0 to 1.0]
 PARAMETER hfe54            REAL    0.0 [0.0 to 1.0]
 
-PARAMETER rhoAmbient       REAL    1.0e7 [0 to ]
-PARAMETER tempAmbient      REAL    2.0e8 [0 to ]
+PARAMETER rhoAmbient       REAL    1.0E-24 [0 to ]
+PARAMETER tempAmbient      REAL    1.0E6 [0 to ]
 PARAMETER velxAmbient      REAL    0.0
 
-PARAMETER rhoPerturb       REAL    4.236e7
-PARAMETER tempPerturb      REAL    4.423e9
-PARAMETER velPerturb       REAL    2.876E+08
-PARAMETER xAtm             REAL    0.0
+PARAMETER rhoPerturb       REAL    1.0E-18
+PARAMETER tempPerturb      REAL    1.0E4
+PARAMETER velPerturb       REAL    1.0E9
+
+PARAMETER rhoCloud         REAL    1.0E-20
+PARAMETER tempCloud        REAL    1.0E4
+PARAMETER xCenterCloud     REAL    0.0
+
 PARAMETER nChunks          INTEGER 1
 PARAMETER chunkEllipticity REAL   0.0
 PARAMETER chunkAngle       REAL   0.0
