--- a/Config
+++ b/Config
@@ -26,11 +26,11 @@ D    xo16          	mass fraction of o16
 D    rhoAmbient   	density of the cold upstream material 
 D    tempAmbient     	temperature of the cold upstream material
 D    velxAmbient     	x-velocity of the cold upstream material
-D    rhoPerturb   	density of the post shock material
-D    tempPerturb     	temperature of the post shock material
-D    velxPerturb     	x-velocity of the post shock material
-D    radiusPerturb     	distance below which the perturbation is applied
-D    x/y/zCenterPerturb origin of the of the perturbation
+D    rhoUDS   	density of the post shock material
+D    tempUDS     	temperature of the post shock material
+D    velxUDS     	x-velocity of the post shock material
+D    radiusUDS     	distance below which the perturbation is applied
+D    x/y/zCenterUDS origin of the of the perturbation
 D    usePseudo1d     	.true. for a 1d initial configuration, with the 
 D &                        copied along the y and z directions
 D &                	.false. for a spherical configuration
@@ -73,9 +73,10 @@ PARAMETER rhoAmbient        REAL    1.0E-24 [0 to ]
 PARAMETER tempAmbient       REAL    1.0E6 [0 to ]
 PARAMETER velxAmbient       REAL    0.0
 
-PARAMETER rhoPerturb        REAL    1.0E-18
-PARAMETER tempPerturb       REAL    1.0E4
-PARAMETER velPerturb        REAL    1.0E9
+PARAMETER rhoUDS            REAL    1.0E-18
+PARAMETER tempUDS           REAL    1.0E4
+PARAMETER velMedianUDS      REAL    7.0E8
+PARAMETER velSpreadUDS      REAL    3.0E8
 
 PARAMETER rhoCloud          REAL    1.0E-20
 PARAMETER tempCloud         REAL    1.0E4
@@ -89,13 +90,10 @@ PARAMETER chunkAngle        REAL   0.0
 PARAMETER chunkSeparation   REAL   3.0
 PARAMETER rotVel            REAL   0.0
 
-PARAMETER radiusPerturb     REAL    25.6
-PARAMETER xCenterPerturb    REAL    0.0
-PARAMETER yCenterPerturb    REAL    0.0
-PARAMETER zCenterPerturb    REAL    0.0
-
-PARAMETER virTemp           REAL    1.e8
-PARAMETER virDens           REAL    1.e5
+PARAMETER radiusUDS         REAL    25.6
+PARAMETER xCenterUDS        REAL    0.0
+PARAMETER yCenterUDS        REAL    0.0
+PARAMETER zCenterUDS        REAL    0.0
 
 PARAMETER vCirc             REAL    0.e0
 
